# gol-cpp

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
GameOfLife/: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h
TestApp/: CMakeLists.txt  main.cpp
